--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.55",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
